log
Wed 10 May 2023 12:59:37 AM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|4
total_score: 0/70
3447d6f
Wed 10 May 2023 01:03:46 AM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|4
total_score: 0/70
28908a8
Wed 10 May 2023 01:04:18 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
ca667ac
Wed 10 May 2023 01:04:45 AM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|3
total_score: 10/70
7ad0878
Wed 10 May 2023 10:56:55 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:27:28: error: subscripted value is neither array nor pointer nor vector
   27 |     pq->heapArray->priority[pq->size]=data;
      |                            ^
Compilation failed
c6b734e
Wed 10 May 2023 10:57:16 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:27:29: error: invalid type argument of unary ‘*’ (have ‘int’)
   27 |     pq->heapArray->priority[*pq->size]=data;
      |                             ^~~~~~~~~
Compilation failed
f4b6330
Wed 10 May 2023 10:57:45 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:27:28: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   27 |     pq->heapArray->priority=data;
      |                            ^
cc1: all warnings being treated as errors
Compilation failed
c404f28
Wed 10 May 2023 10:58:36 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:27:28: error: dereferencing ‘void *’ pointer [-Werror]
   27 |     pq->heapArray->priority[pq->heapArray->data]=data;
      |                            ^
heap.c:27:49: error: invalid use of void expression
   27 |     pq->heapArray->priority[pq->heapArray->data]=data;
      |                                                 ^
cc1: all warnings being treated as errors
Compilation failed
57ede8d
Wed 10 May 2023 11:07:15 PM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
d34629e
Wed 10 May 2023 11:35:03 PM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|3
total_score: 10/70
6af1dab
Thu 11 May 2023 10:21:02 PM UTC: 
 heap.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
 tests:  2|2
total_score: 20/70
21b9096
Thu 11 May 2023 10:26:36 PM UTC: 
 heap.c | 10 +---------
 1 file changed, 1 insertion(+), 9 deletions(-)
 tests:  2|2
total_score: 20/70
83884bf
Thu 11 May 2023 10:32:57 PM UTC: 
 heap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  2|2
total_score: 20/70
b6a1112
Thu 11 May 2023 10:35:20 PM UTC: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 25/70
868b1bd
Thu 11 May 2023 10:36:00 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
ab71bde
Thu 11 May 2023 10:36:48 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
3d9f471
Thu 11 May 2023 10:37:16 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
fdf44eb
